<resources>
    <string name="app_name">Event Planner</string>


    <string name="logintext">Login</string>
    <string name="signup">Sign up</string>
    <string name="unique">Phone Number or Email</string>
    <string name="password">Password</string>
    <string name="forget">Forget Password</string>
    <string name="loginbutton">Log In</string>
    <string name="logtosigntext">Do not have an account?<b> Sign up.</b></string>

    <string name="signin">Sign in</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="contact">Phone Number</string>
    <string name="birthdate">Birthdate</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="repassword">Re-enter Password</string>
    <string name="female">Female</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="area">Area</string>
    <string name="Adreess">Adreess</string>
    <string name="signtolog">Already Had an Account.<b> Log-in</b></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string-array name="cities">
        <item>Select Your City</item>
        <item>Ahmedabad</item>
        <item>Vadodara</item>
        <item>Surat</item>
        <item>Rajkot</item>
        <item>Bhavnagar</item>
        <item>Gandhinagar</item>
    </string-array>

    <string-array name="eventstatus">
        <item>Select Event Status</item>
        <item>Ongoing</item>
        <item>Upcoming</item>
        <item>Past</item>
    </string-array>

</resources>