<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorwhite"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registration">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorwhite">

        <EditText
            android:id="@+id/unername_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:inputType="text"
            android:drawableTint="@color/colorpink"
            android:background="@drawable/custom_border"
            android:padding="10dp"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/ic_baseline_account_circle_24"
            android:layout_marginTop="50dp"
            android:hint="@string/name"
            android:layout_marginHorizontal="15dp" />


        <EditText
            android:id="@+id/phonenumber_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:background="@drawable/custom_border"
            android:padding="10dp"
            android:drawableTint="@color/colorpink"
            android:inputType="phone"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/ic_baseline_phone_24"
            android:layout_marginTop="15dp"
            android:hint="@string/contact"
            android:layout_marginHorizontal="15dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:background="@drawable/custom_border"
            android:padding="10dp"
            android:drawableTint="@color/colorpink"
            android:inputType="textEmailAddress"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/ic_baseline_email_24"
            android:layout_marginTop="15dp"
            android:hint="@string/email"
            android:layout_marginHorizontal="15dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:inputType="textPassword"
            android:drawableTint="@color/colorpink"
            android:background="@drawable/custom_border"
            android:padding="10dp"
            android:password="true"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/ic_baseline_lock_24"
            android:layout_marginTop="15dp"
            android:hint="@string/password"
            android:layout_marginHorizontal="15dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:drawablePadding="10dp"
            android:background="@drawable/custom_border"
            android:padding="10dp"
            android:inputType="textPassword"
            android:drawableTint="@color/colorpink"
            android:password="true"
            android:drawableLeft="@drawable/ic_baseline_lock_24"
            android:layout_marginTop="15dp"
            android:hint="@string/repassword"
            android:layout_marginHorizontal="15dp"/>

        <EditText
            android:id="@+id/birthdate_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:drawableTint="@color/colorpink"
            android:inputType="date"
            android:background="@drawable/custom_border"
            android:padding="10dp"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/ic_baseline_calendar_today_24"
            android:layout_marginTop="15dp"
            android:hint="@string/birthdate"
            android:layout_marginHorizontal="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="15dp"
            android:textColor="@color/colorpink"
            android:text="@string/gender"
            android:textAlignment="textStart"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:orientation="horizontal">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                android:layout_marginHorizontal="15dp">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:buttonTint="@color/colorpink"
                    android:textColor="@color/colorpink"
                    android:backgroundTint="@color/colorpink"
                    android:foregroundTint="@color/colorpink"
                    android:textSize="17dp"
                    android:checked="false"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    android:buttonTint="@color/colorpink"
                    android:textColor="@color/colorpink"
                    android:backgroundTint="@color/colorpink"
                    android:foregroundTint="@color/colorpink"
                    android:textSize="17dp"
                    android:layout_marginLeft="15dp"
                    android:checked="false"/>

            </RadioGroup>

        </LinearLayout>

        <EditText
            android:id="@+id/address_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_marginHorizontal="15dp"
            android:drawableTint="@color/colorpink"
            android:background="@drawable/custom_border"
            android:padding="10dp"
            android:layout_marginTop="15dp"
            android:drawableLeft="@drawable/ic_baseline_location_on_24"
            android:drawablePadding="10dp"
            android:hint="@string/Adreess"
            android:lines="5"/>

        <Button
            android:id="@+id/signin_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:text="@string/signin"
            android:textColor="@color/colorwhite"
            android:background="@drawable/custom_button"
            android:layout_marginTop="15dp"
            android:textSize="15dp"/>

        <TextView
            android:id="@+id/signtolog_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:layout_marginHorizontal="15dp"
            android:textColor="@color/colorblue"
            android:text="@string/signtolog"
            android:textSize="15dp"
            android:textAlignment="center"/>

    </LinearLayout>

</ScrollView>